added projects and sevices

--- a/src/components/skills/skills.module.scss
+++ b/src/components/skills/skills.module.scss
@@ -1,7 +1,11 @@
 .skills {
   background-color: black;
   .title {
-    color: #00b894;
+    color: white;
+    span{
+      color:  #00b894;
+
+  }
   }
 
  
