--- a/src/components/codingProfile/coding.module.scss
+++ b/src/components/codingProfile/coding.module.scss
@@ -1,20 +1,37 @@
 .codingProfile {
   background-color: black;
   .wrapper {
-    .profileButton,.data {
+    .profileButton,
+    .data {
       .box {
-        background-color: #1f1f1f;
-        box-shadow:inset 2px 2px .7px 0.1px #00b894;
-    }
-    .button {
-        background-color: transparent;
-        box-shadow:2px 2px 7px 0.1px black;
-        // box-shadow: 0px 1px .7px 0.1px #00b894;
+        // background-color: #1f1f1f;
+        // box-shadow:inset 2px 2px .7px 0.1px #00b894;
+      }
+      .button {
+        // background-color: transparent;
+        // box-shadow:2px 2px 7px 0.1px black;
+        box-shadow: 0px 1px 1px 0.4px #00b894;
+        border-radius: 40px;
+        position: relative;
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        .hoverIcon {
+          transition: all 0.3s ease-in-out;
+          position: absolute;
+          top: -30px;
+          left: -8px;
+          visibility: hidden;
+          color: black;
+        }
         &:hover {
-          transition: all 0.2s ease-in-out;
           box-shadow: none;
           background-color: #00b894;
           transform: scale(1.05);
+          transform: translateY(-5px);
+          .hoverIcon {
+            color: white;
+            visibility: visible;
+          }
         }
         &:active {
           background-color: #55efc4;
@@ -22,7 +39,6 @@
         span {
           color: white;
           font-size: 18px;
-          cursor: pointer;
         }
       }
       h1 {
