--- a/src/components/internCard/internCard.module.scss
+++ b/src/components/internCard/internCard.module.scss
@@ -4,18 +4,18 @@
   border-radius: 10px;
   overflow: hidden;
   .box {
-      height: 200px;
-      img{
-          object-fit: cover;
-      }
+    height: 200px;
+    img {
+      object-fit: cover;
+    }
     span {
       font-size: 24px;
       font-weight: 900;
       color: white;
     }
-    .round{
-        border-radius: 50%;
-        margin: 5px 0;
+    .round {
+      border-radius: 50%;
+      margin: 5px 0;
     }
   }
   .content {
@@ -42,6 +42,8 @@
     }
   }
 }
-#up{
+#up {
+  @media screen and (min-width: 992px) {
     transform: translateY(-100px);
+  }
 }
