--- a/src/components/profile/profile.module.scss
+++ b/src/components/profile/profile.module.scss
@@ -10,6 +10,11 @@
         font-size: 80px;
         color: white;
       }
+      @media screen and (max-width:500px) {
+        h1,h2{
+          font-size: 50px;
+        }
+      }
       p {
         color: #b2bec3;
       }
