--- a/src/components/projects/project.module.scss
+++ b/src/components/projects/project.module.scss
@@ -1,7 +1,12 @@
 .project{
-   
-    .wrapper{
+   z-index: 10;
+   .wrapper{
+       .swipper{
+           
+           z-index: 1000 !important;
+        }
         img{
+            z-index: -10;
             border-radius: 10px;
             box-shadow: 4px 4px 12px .01px #6f7070;
             
